Set compression on 2 layers only

--- a/jupyter_interactive_environment_exploration.ipynb
+++ b/jupyter_interactive_environment_exploration.ipynb
@@ -588,7 +588,7 @@
     "    #>>>>>>>>>>>>>>\n",
     "    \n",
     "    #>>>>>>>>>>>>>>\n",
-    "    image_reconst_layers = [compress_svd(image[:,:,i],k)[0] for i in range(3)]\n",
+    "    image_reconst_layers = [compress_svd(image[:,:,i],k)[0] for i in range(2)]\n",
     "    image_reconst = np.zeros(image.shape)\n",
     "    #for i in range(3):\n",
     "    #    image_reconst[:,:,i] = image_reconst_layers[i]\n",
@@ -598,6 +598,7 @@
     "    print(str(nrows) + \", \" + str(ncols) + \", \" + str(nchans))\n",
     "#     for i in range(3):\n",
     "#         image_reconst_layers[i] = image_reconst_layers[i].dot(rgb_from_yuv.T.copy())\n",
+    "    image_reconst_layers.append(image[:,:,2])\n",
     "    for i in range(nrows):\n",
     "        for j in range(ncols):\n",
     "            for c in range(nchans):\n",
